# newrelic_apikeys_cli

./: .env.example  .gitignore  Cargo.toml  README.md  demo.sh  run.sh
src/: main.rs
