[package]
name = "newrelic_apikeys_cli"
version = "0.1.0"
edition = "2021"
description = "A CLI tool for interacting with New Relic's Nerdgraph API"
authors = ["Harry Kimpel <harrykimpel@hotmail.com>"]
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
